1st basic migration (with a few losses) Details: InfluxdbIT - because  "com.influxdb" %% "influxdb-client-scala" is not yet available for pekko - workaround: Use Flux Java lib Dedupe - because  "org.squbs" %% "squbs-ext" is not yet available for pekko